--- a/styles.css
+++ b/styles.css
@@ -1,24 +1,22 @@
 /* General body styles */
 body {
-    margin: 0;
     font-family: Arial, sans-serif;
     background-color: #f2f2f2;
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-image: url(https://tinyurl.com/mr8etb3n);
-    background-size: 80%;
+    background-size: cover;
     
 }
 
 /* Navigation Bar */
 .navbar {
-    background-color: #470217;
-    padding: 15px 30px;
+    background-image: url(https://img.freepik.com/premium-vector/fifa-world-cup-background-illustration-vector_148524-1.jpg?w=826);
+    padding: 10px;
     display: flex;
     flex-direction: column; /* Stack logo and links vertically */
     align-items: center; /* Center horizontally */
-    width: 100%;
+    width: 99%;
     position: fixed;
     top: 0;
     left: 0;
@@ -28,18 +26,19 @@ body {
 }
 
 .navbar .logo {
-    margin-bottom: 10px; /* Space between logo and navigation links */
+    margin-bottom: 5px; /* Space between logo and navigation links */
 }
 
 .navbar .logo img {
-    width: 150px; /* Adjust size as needed */
+    width: 70px; /* Adjust size as needed */
     height: auto;
+    margin-bottom: 5px;
 }
 
 .nav-links {
     list-style-type: none;
     margin: 0;
-    padding: 0;
+    margin-bottom: 5px;
     display: flex;
     justify-content: center; /* Center the nav items horizontally */
 }
@@ -49,18 +48,19 @@ body {
 }
 
 .nav-links a {
-    color: white;
+    color: #5d0f0c;
     text-decoration: none;
     font-size: 18px;
     font-weight: bold;
     padding: 10px;
     border-radius: 5px;
-    background-color: #5d0f0c; /* Darker shade for better visibility */
+    background-color: white; /* Darker shade for better visibility */
     transition: background-color 0.3s;
 }
 
 .nav-links a:hover {
     background-color: #3d0b0a; /* Even darker shade on hover */
+    color: white;
 }
 
 /* Add padding to the body to prevent content overlap */
@@ -71,7 +71,7 @@ body {
     width: 100%;
     max-width: 1200px;
     justify-content: space-between;
-    padding: 20px;
+    padding: 180px;
 }
 
 /* Container for Information Table */
